# conclave

./: .env.template  .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
prompts/: templates.yaml
scripts/: conclave.py
scripts/conclave/: __init__.py  bias.py  cli.py  config.py  cost.py  dialogue.py  fallacies.py  orchestrator.py  progress.py  providers.py  ranking.py  scoring.py  sessions.py  voting.py
tests/: conftest.py  test_bias.py  test_dialogue.py  test_fallacies.py  test_orchestrator.py  test_providers.py  test_ranking.py  test_scoring.py  test_sessions.py  test_streaming.py  test_voting.py
